# resume-ai

./: .env.sample  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  mypy.ini  pyproject.toml  run-precommit.sh  test.docx
app/: main.py
app/domain/models/: chat_completion.py  chat_response.py  document.py  education.py  experience.py  profile.py  resume.py  skill.py
app/domain/services/: abstract_profile_service.py
app/infrastructure/: factories.py  settings.py
app/infrastructure/chat/: abstract_chat_completion.py  abstract_document_generator.py
app/infrastructure/middleware/: header_verification_middleware.py
app/infrastructure/persistence/: abstract_resume_persistence.py  resume_table_definition.py
app/infrastructure/routers/: curate_router.py  profile_router.py  resume_router.py
app/infrastructure/utilities/: hashing.py
src/: main.py
src/domain/models/: profile.py
src/infrastructure/routers/: profile_router.py
tests/: conftest.py  raw_data.py
tests/domain/: model_creator.py  test_chat_completion.py  test_chat_response.py  test_document_structure.py  test_experience.py  test_profile.py  test_resume.py
tests/infrastructure/: fixtures.py  test_document_generator.py  test_email_header_middleware.py  test_hash_from_settings.py  test_profile_api.py  test_profile_api_crud.py  test_profile_api_validation.py  test_resume_api.py
tests/infrastructure/integration/: test_curate_api.py  test_email_header_middleware.py  test_profile_api_crud.py  test_profile_api_validation.py  test_resume_api.py  test_resume_persistence.py
